--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>LearnSpring</groupId>
-    <artifactId>LearnSpring</artifactId>
+    <groupId>WeChatRobot</groupId>
+    <artifactId>WeChatRobot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>LearnSpring</name>
+    <name>WeChatRobot</name>
     <!--设置版本号-->
     <properties>
         <spring.security.version>4.0.4.RELEASE</spring.security.version>
@@ -280,135 +280,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!--工作流相关-->
-        <!-- <dependency>
-             <groupId>org.activiti</groupId>
-             <artifactId>activiti-engine</artifactId>
-             <version>${activiti.version}</version>
-             <exclusions>
-                 <exclusion>
-                     <artifactId>spring-core</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-beans</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>jcl-over-slf4j</artifactId>
-                     <groupId>org.slf4j</groupId>
-                 </exclusion>
-             </exclusions>
-         </dependency>
-         <dependency>
-             <groupId>org.activiti</groupId>
-             <artifactId>activiti-spring</artifactId>
-             <version>${activiti.version}</version>
-             <exclusions>
-                 <exclusion>
-                     <artifactId>spring-core</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-beans</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-tx</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-orm</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>jcl-over-slf4j</artifactId>
-                     <groupId>org.slf4j</groupId>
-                 </exclusion>
-             </exclusions>
-         </dependency>
-         <dependency>
-             <groupId>org.activiti</groupId>
-             <artifactId>activiti-bpmn-converter</artifactId>
-             <version>${activiti.version}</version>
-             <exclusions>
-                 <exclusion>
-                     <artifactId>jcl-over-slf4j</artifactId>
-                     <groupId>org.slf4j</groupId>
-                 </exclusion>
-             </exclusions>
-         </dependency>
-         <dependency>
-             <groupId>org.activiti</groupId>
-             <artifactId>activiti-json-converter</artifactId>
-             <version>${activiti.version}</version>
-             <exclusions>
-                 <exclusion>
-                     <artifactId>jcl-over-slf4j</artifactId>
-                     <groupId>org.slf4j</groupId>
-                 </exclusion>
-             </exclusions>
-         </dependency>
-         <dependency>
-             <groupId>org.activiti</groupId>
-             <artifactId>activiti-rest</artifactId>
-             <version>${activiti.version}</version>
-             <exclusions>
-                 <exclusion>
-                     <artifactId>spring-core</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-security</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-security-core</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-web</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-cas</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-beans</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-tx</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-orm</artifactId>
-                     <groupId>org.springframework</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>jcl-over-slf4j</artifactId>
-                     <groupId>org.slf4j</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-security-config</artifactId>
-                     <groupId>org.springframework.security</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>spring-security-core</artifactId>
-                     <groupId>org.springframework.security</groupId>
-                 </exclusion>
-                 <exclusion>
-                     <artifactId>slf4j-log4j12</artifactId>
-                     <groupId>org.slf4j</groupId>
-                 </exclusion>
-             </exclusions>
-         </dependency>-->
-        <!--工作流相关结束-->
     </dependencies>
 
     <build>
-        <finalName>LearnSpring</finalName>
+        <finalName>WeChatRobot</finalName>
         <filters>
             <filter>src/main/resources/other.properties</filter>
         </filters>
